syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message ListObjectsRequest {
	OpObject object = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.Int32Value depth = 2;
}

message ListObjectsResponse {
	repeated Object objects = 1;
}
