syntax = "proto3";

package ai.metathings.service.device;
option go_package = "github.com/nayotta/metathings/proto/device";

import "google/protobuf/wrappers.proto";

import "github.com/nayotta/metathings/proto/deviced/model.proto";

message PutObjectRequest {
	ai.metathings.service.deviced.OpObject object = 1;
	google.protobuf.BytesValue content = 2;
}
