syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "deviced";

import "validate/validate.proto";

import "model.proto";

message GetObjectRequest {
	OpObject object = 1 [(validate.rules).message.required = true];
}

message GetObjectResponse {
	Object object = 1;
}
