syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message GetObjectContentRequest {
	OpObject object = 1;
}

message GetObjectContentResponse {
	bytes content = 1;
}
