syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "deviced";

import "validate/validate.proto";

import "model.proto";

message RenameObjectRequest {
	OpObject source = 1 [(validate.rules).message.required = true];
	OpObject destination = 2 [(validate.rules).message.required = true];
}
